我修改了数据库连接的逻辑，新建了一个db.js用来来连接数据库，更改了user.js连接数据库并且创建获得users表的上下文，修改了users.js用来处理浏览器对/users的get请求，这个方法需要一个user_id参数，然后返回给浏览器一串有关该id的user的字符串

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,10 @@
 {
   "development": {
     "username": "root",
-    "password": "123456",
+    "password": "huxiao19960614",
     "database": "rotk",
-    "host": "127.0.0.1",
+    "host": "localhost",
+    "port":"3306",
     "dialect": "mysql"
   },
   "test": {
